[SubscriberService] chunk db query with "in"-statement